# XerOCR

./: .dockerignore  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  Makefile  NEXT_SESSION.md  PLAN_FIN_MIGRATION.md  PLAN_INTERFACE.md  PLAN_PARITE.md  PLAN_SPACE_INTERACTIF.md  PROMPT_ANALYSE_COUCHE.md  README.md  REMEDIATION_PLAN.md  SPEC_HIPE.md  VISION_DATASET_XEROCR.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  deploy-space.yml
deploy/: Dockerfile  Dockerfile.engine  Dockerfile.space  README_SPACE.md  requirements.txt
deploy/reports/: .gitkeep  demonstration.json
design/: README.md  chrome.jsx  data.jsx  picarones.css  tokens.css  view-by-document.jsx  view-by-engine.jsx  view-crosses.jsx  view-synthesis.jsx
design/fonts/: OCRA-LICENSE.txt
design/js/: app.jsx  components.jsx  data.jsx  i18n.jsx  view-benchmark.jsx  view-other.jsx
design/mockups/: refonte-rapport-benchmark.html  type-studies.html  xerocr-v1-sharp.html  xerocr-v2-rounded.html
design/render/: .gitignore  package.json  regenerate.sh  render.js
docs/: PLUGINS.md  corpus_huggingface.md
scripts/: capture_cassettes.py
tests/adapters/: test_anthropic.py  test_azure_di.py  test_calamari.py  test_google_vision.py  test_images.py  test_kraken.py  test_llm_base.py  test_llm_pipeline.py  test_llm_token_usage.py  test_mistral.py  test_mistral_ocr.py  test_ollama.py  test_openai.py  test_pero.py  test_precomputed.py  test_tesseract.py  test_workspace.py
tests/app/: test_corpus_import.py  test_corpus_import_escriptorium.py  test_corpus_import_gallica.py  test_corpus_import_hf.py  test_corpus_store_materialize.py  test_corpus_upload.py  test_engines.py  test_hipe_export.py  test_history.py  test_history_recording.py  test_jobs.py  test_loader.py  test_models.py  test_module_registry.py  test_normalization_preview.py  test_orchestrator.py  test_plugin_discovery.py  test_plugin_install.py  test_report_images.py  test_results_io.py  test_resume.py  test_run_planning.py  test_security.py  test_segmentation_store.py
tests/architecture/: test_file_budgets.py  test_layer_dependencies.py  test_no_broad_except.py  test_no_dead_ui.py  test_no_legacy_imports.py  test_no_side_effect_imports.py  test_single_version_source.py  test_status_freshness.py
tests/deploy/: test_packaging.py
tests/domain/: test_artifact_key.py  test_artifacts.py  test_corpus.py  test_deadline.py  test_documents.py  test_errors.py  test_evaluation.py  test_pipeline.py  test_provenance.py  test_run_manifest.py  test_run_spec.py
tests/evaluation/: test_archaic.py  test_archives.py  test_calibration.py  test_conformity.py  test_correction.py  test_diagnostics.py  test_document_texts.py  test_economics.py  test_hipe_golden.py  test_image_quality.py  test_inference.py  test_inter_engine.py  test_lines.py  test_longitudinal.py  test_markers.py  test_metrics_conformity.py  test_metrics_diacritics.py  test_metrics_parity.py  test_metrics_philology.py  test_metrics_stats.py  test_metrics_structured_data.py  test_metrics_text.py  test_ner.py  test_ner_runner.py  test_preservation.py  test_projection.py  test_projection_real_bnl.py  test_reference_text.py  test_region_detection.py  test_registry.py  test_representations.py  test_result.py  test_roman.py  test_runner.py  test_structure_real_fixtures.py  test_structured_data.py  test_taxonomy.py  test_textual_fidelity.py  test_word_errors.py
tests/fixtures/: sample_segmenter_plugin.py
tests/fixtures/sample_plugin_pkg/: pyproject.toml  xerocr_sample_plugin.py
tests/formats/: test_geometry.py  test_real_fixtures.py  test_xml.py
tests/guardrails/: test_engine_dispatch_exhaustive.py  test_interfaces_thin.py  test_nav_targets_resolve.py  test_no_foreign_private_access.py  test_public_mode_on_space.py  test_routes_degrade_gracefully.py  test_runtime_paths_writable.py
tests/interfaces/: test_cli_compare.py  test_cli_demo.py  test_cli_history.py  test_cli_run.py  test_cli_serve.py  test_real_corpus_bnl.py
tests/pipeline/: test_executor.py  test_hybrid_real_bnl.py  test_run_control.py  test_segmentation_pipeline.py  test_segmentation_skeleton.py  test_zero_shot_e2e.py
tests/prompts/: test_prompts.py
tests/reports/: test_by_document_section.py  test_by_engine_section.py  test_calibration_section.py  test_compare.py  test_compare_widget.py  test_conformity_section.py  test_corpus_composition_section.py  test_correction_section.py  test_cross_engine_section.py  test_csv_export.py  test_diagnostics_section.py  test_dispersion_section.py  test_document_detail_section.py  test_documents_section.py  test_economics_section.py  test_embedded.py  test_engine_badges.py  test_engine_profile_section.py  test_gallery_section.py  test_glossary.py  test_image_quality_section.py  test_layout_svg.py  test_lines_section.py  test_ner_section.py  test_overview_section.py  test_philology_section.py  test_renderer.py  test_structured_data_section.py  test_svg.py  test_synthesis_section.py  test_tables.py  test_taxonomy_section.py  test_text_diff.py  test_textual_fidelity_section.py  test_word_errors_section.py
xerocr/adapters/: ANALYSE_COUCHE_5.md  __init__.py  _workspace.py  images.py
xerocr/app/: ANALYSE_COUCHE_6.md  __init__.py  corpus_import.py  corpus_upload.py  data_dir.py  engines.py  hipe_export.py  history.py  jobs.py  loader.py  models.py  normalization_preview.py  orchestrator.py  report_images.py  results.py  resume.py  run_planning.py  security.py  segmentation.py  versioning.py
xerocr/domain/: MIGRATION_COUCHE_1.md  __init__.py  _version_fallback.py  artifact_key.py  artifacts.py  confidence.py  corpus.py  deadline.py  documents.py  errors.py  evaluation.py  layout.py  pipeline.py  projection.py  provenance.py  run.py  run_spec.py  usage.py
xerocr/evaluation/: ANALYSE_ETAPE_4.md  MIGRATION_COUCHE_3.md  __init__.py  analysis.py  archaic.py  archives.py  calibration.py  conformity.py  context.py  correction.py  diagnostics.py  document_texts.py  economics.py  errors.py  image_quality.py  inference.py  inter_engine.py  lines.py  longitudinal.py  markers.py  metric.py  (+13 more)
(+426 files in other folders)
