[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xerocr"
description = "Banc d'essai déterministe de pipelines de transcription (OCR / HTR / VLM)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dynamic = ["version"]
dependencies = [
    "pydantic>=2",
    "lxml>=5",
    "pyyaml>=6",
    "scipy>=1.11",
    "rapidfuzz>=3",
]

[project.optional-dependencies]
dev = [
    "ruff", "mypy", "pytest", "pytest-cov", "lxml-stubs", "types-PyYAML",
    "jiwer", "fastapi", "httpx", "httpcore", "jinja2", "python-multipart",
]
tesseract = ["pytesseract"]
openai = ["openai"]
mistral = ["mistralai"]
ollama = ["httpx", "httpcore"]
huggingface = ["datasets"]
serve = ["fastapi", "uvicorn", "jinja2", "python-multipart", "httpx", "httpcore"]

[project.scripts]
xerocr = "xerocr.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["xerocr*"]

# La coquille web embarque ses gabarits + assets auto-hébergés (CSS, polices) ;
# ils doivent voyager dans le wheel pour exister après ``pip install`` (Space/CI).
[tool.setuptools.package-data]
"xerocr.interfaces.web" = [
    "templates/*.html", "static/css/*.css", "static/js/*.js", "static/fonts/*",
]
# Le rapport autonome (couche 7) incorpore ses polices en data-URI : les woff2
# doivent voyager dans le wheel pour exister après ``pip install``.
"xerocr.reports" = ["_assets/*.woff2"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
version_file = "xerocr/_version.py"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=xerocr --cov-report=term-missing --cov-fail-under=85"
markers = [
    "slow: tests lents (opt-in)",
    "network: tests qui touchent le réseau (opt-in)",
    "live: tests contre une vraie API/binaire (opt-in)",
]
filterwarnings = [
    # `starlette.testclient` (versions 2026) émet une dépréciation httpx→httpx2
    # à l'IMPORT — purement côté tests (la prod sert via uvicorn, sans TestClient).
    # Dette amont, hors de notre code ; filtrée pour garder la sortie propre.
    "ignore:Using .httpx. with .starlette.testclient.:Warning",
]

[tool.coverage.run]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "^\\s*\\.\\.\\.\\s*#",
]
